# ocl-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: plan.md  sandbox.md
docs/demos/: 00-getting-started.md  01-content-exploration.md  02-content-authoring.md  03-repository-lifecycle.md  04-collection-curation.md  05-ai-terminology.md  06-operations.md  07-agent-readiness.md  README.md
docs/plans/: 2026-03-25-remaining-gaps.md  2026-03-26-qa-deep-dive-findings.md
plans/: integration-demos.md  oclcli-comparison.md
src/ocl_cli/: __init__.py  __main__.py  api_client.py  config.py  main.py  output.py
src/ocl_cli/commands/: __init__.py  auth.py  cascade.py  concept.py  expansion.py  export.py  import_cmd.py  mapping.py  org.py  owner.py  ref.py  reference.py  repo.py  server.py  task.py  tool.py  user.py
