[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openconceptlab"
version = "0.1.0"
description = "Command-line interface for the Open Concept Lab API"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Open Concept Lab", email = "info@openconceptlab.org"},
]
keywords = ["ocl", "openconceptlab", "terminology", "healthcare", "fhir", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://openconceptlab.org"
Repository = "https://github.com/OpenConceptLab/ocl-cli"
Issues = "https://github.com/OpenConceptLab/ocl_issues/issues"

[project.scripts]
ocl = "ocl_cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
